tests/invalid/bad_bit_imm.s
  .text

  .global _start
_start:
  and r0, r0, 0xAAAAAAA